@@ -31,6 +31,9 @@ PIG-700: To automate the pig patch test process (gkesavan via sms)
 PIG-712: Added utility functions to create schemas for tuples and bags (zjffdu
 via gates).
 
+PIG-775: PORelationToExprProject should create a NonSpillableDataBag to create
+empty bags (pradeepkth)
+
 BUG FIXES
 
 PIG-733: Order by sampling dumps entire sample to hdfs which causes dfs
